--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,15 @@
     border: 1px solid #d2d2d2ee
 }
 
+.btn-submit{
+  background: #3CBC8D;
+    margin: 0px 10px;
+    border: none;
+    font-size: 15px;
+    padding: 10px;
+    color: #fff;
+    border-radius: 5px;
+}
 .leapHeading{
   font-size: 30px;
   margin: 0 0 20px 0;
@@ -24,4 +33,10 @@ input#year {
   font-size: 18px;
   color: darkgreen;
   font-weight: bold;
+}
+p.message {
+  font-size: 22px;
+  font-style: italic;
+  color: #7d439a;
+  font-weight:bold;
 }
